# forks-deepcompressor-productized

./: README.md  pyproject.toml
deepcompressor/app/diffusion/: ptq.py
deepcompressor/app/diffusion/anima/: __init__.py  cli.py  config.py  nunchaku.py  pipeline.py  prompt_audit.py  qwen_baseline.py  struct.py  tracking.py
deepcompressor/app/diffusion/dataset/: calib.py
deepcompressor/app/diffusion/quant/: activation.py  smooth.py  weight.py
deepcompressor/backend/: utils.py
deepcompressor/calib/: lowrank.py
deepcompressor/calib/config/: lowrank.py
deepcompressor/dataset/: cache.py
deepcompressor/nn/patch/: lowrank.py
examples/diffusion/anima/: README.md
examples/diffusion/prompts/: anima-aesthetic-v1.1-calibration-10000.yaml  anima-aesthetic-v1.1-calibration-categories.yaml  anima-aesthetic-v1.1-inspiration-ledger.md  anima-aesthetic-v1.1-rejected-formulaic-2200.yaml  anima-aesthetic-v1.1-visual-artist-ledger.md
tests/: test_activation_aware_lowrank.py  test_memory_headroom.py
