[project]
name = "deepcompressor-toolkit"
version = "0.0.2"
description = "A productized model compression toolkit for large language and diffusion models."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "Apache-2.0" }
authors = [
    { name = "Yujun Lin" },
    { name = "Muyang Li" },
    { name = "Shang Yang" },
    { name = "Zhekai Zhang" },
    { name = "Haotian Tang" },
    { name = "Song Han" },
]
dependencies = [
    "accelerate>=0.26.0",
    "aio-pika>=7.2.0,<10.0.0",
    "av>=13.0.0",
    "beautifulsoup4>=4.12.0",
    "bitsandbytes>=0.42.0",
    "boto3>=1.34.0",
    "cd-fvd>=0.1.1",
    "clean-fid>=0.1.35",
    "clip>=0.2.0",
    "comfyui==0.26.0",
    "datasets>=2.16.0",
    "diffusers>=0.37.0",
    "dominate>=2.9.1",
    "einops>=0.8.0",
    "ftfy>=6.2.0",
    "fuzzywuzzy>=0.18.0",
    "image-reward @ git+https://github.com/THUDM/ImageReward.git@main",
    "jieba>=0.42.1",
    "lm-eval>=0.4.2",
    "mlflow-skinny>=3.0,<4",
    "ninja>=1.11.1",
    "nunchaku==1.3.0.dev20260302+cu130; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "omniconfig>=0.1.10",
    "opencv-contrib-python-headless>=4.12.0.88,<5",
    "protobuf>=5.26.0",
    "python-levenshtein>=0.26.1",
    "rotary-embedding-torch>=0.6.4",
    "rouge>=1.0.1",
    "sentencepiece>=0.1.99",
    "timm>=1.0.7",
    "torch==2.11.0",
    "torchaudio==2.11.0",
    "torchmetrics>=1.4.0",
    "torchvision==0.26.0",
    "tqdm>=4.66.0",
    "transformers>=4.57.3,<5",
    "typer>=0.16.0",
    "xformers>=0.0.26",
]

[project.scripts]
deepcompressor-audit-prompts = "deepcompressor.app.diffusion.anima.prompt_audit:main"
deepcompressor-qwen-baseline = "deepcompressor.app.diffusion.anima.qwen_baseline:main"
deepcompressor-svdquant = "deepcompressor.app.diffusion.anima.cli:main"

[project.urls]
Repository = "https://github.com/AppMana/forks-deepcompressor-productized"
Upstream = "https://github.com/nunchaku-ai/deepcompressor"

[dependency-groups]
dev = [
    "ipython>=8.0.0",
    "matplotlib>=3.8.4",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.15",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["deepcompressor"]

[tool.uv]
environments = ["sys_platform == 'linux' and platform_machine == 'x86_64'"]
prerelease = "if-necessary-or-explicit"
override-dependencies = [
    "opencv-python; python_version < '0'",
    "opencv-python-headless; python_version < '0'",
    "opencv-contrib-python; python_version < '0'",
    "opencv-contrib-python-headless==4.12.0.88",
    "torch==2.11.0",
    "torchaudio==2.11.0",
    "torchvision==0.26.0",
    "transformers>=4.57.3,<5",
]

[[tool.uv.index]]
name = "appmana-nodes"
url = "https://nodes.appmana.com/simple"
explicit = true

[tool.uv.sources]
comfyui = { index = "appmana-nodes" }
nunchaku = { index = "appmana-nodes" }

[tool.uv.extra-build-dependencies]
image-reward = ["setuptools<81"]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
select = ["B", "C", "E", "F", "I", "W"]
ignore = []

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
